--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-outside-click-handler": "^1.3.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "swiper": "^11.0.3",
     "swiper-react": "^1.0.0",
     "web-vitals": "^2.1.4"
