--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.1",
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.16",
+    "@mantine/dates": "^6.0.16",
+    "@mantine/form": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
-    "esri-leaflet-geocoder": "^2.3.3",
+    "esri-leaflet-geocoder": "^3.1.4",
     "framer-motion": "^10.16.4",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
